Fix menu overlap issue
The button for the conversation menu was rendering on top of the global
menu since the global menu was part of a position-fixed element and thus
except from the normal document flow.

// FREEBIE

--- a/stylesheets/_global.scss
+++ b/stylesheets/_global.scss
@@ -29,9 +29,8 @@ body {
 }
 
 #header {
-  position: fixed;
   width: 100%;
-  height: $header-height;
+  height: 0;
   line-height: 24px;
   color: #f2f2f2;
 
