--- a/stylesheets/manifest.css
+++ b/stylesheets/manifest.css
@@ -38,9 +38,8 @@ body {
   display: none; }
 
 #header {
-  position: fixed;
   width: 100%;
-  height: 36px;
+  height: 0;
   line-height: 24px;
   color: #f2f2f2; }
   #header button {
